<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/add_edit_fragment_title_edit_text"
        style="@style/EditTextStyle"
        android:fontFamily="@font/nunito_semibold"
        android:hint="@string/title_hint"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_edit_fragment_subtitle_edit_text"
        style="@style/EditTextStyle"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nunito"
        android:gravity="start"
        android:hint="@string/subtitle_hint"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/add_edit_fragment_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_edit_fragment_title_edit_text" />

    <Button
        android:id="@+id/add_edit_fragment_save_button"
        style="@style/ButtonStyle"
        android:fontFamily="@font/nunito_extrabold"
        android:text="@string/save_button_string"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>