<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:id="@+id/individual_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_extrabold"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:text="@string/sample_title_string"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitle_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_textView"
            android:fontFamily="@font/nunito_extrabold"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:text="@string/sample_subtitle_string"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/subtitle_textView"
            android:fontFamily="@font/montserrat_bold"
            android:paddingStart="0sp"
            android:paddingEnd="15dp"
            android:text="@string/sample_date_string"
            android:textAlignment="textEnd"
            android:textSize="13sp"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>